Fix share in dark mode (#5708)
* Fixing filter hover states

* Less embarrassing share dialog

--- a/src/ui/components/shared/SharingModal/CollaboratorsList.css
+++ b/src/ui/components/shared/SharingModal/CollaboratorsList.css
@@ -16,7 +16,7 @@
 }
 
 .sharing-modal .permission:hover {
-  background: #eee;
+  background: var(--menu-hover-bgcolor);
   border-radius: 8px;
 }
 
